[package]
name = "protobuf_iter"
version = "0.1.2"
authors = ["Astro <astro@spaceboyz.net>"]
license = "MIT"
description = "Iterate over Protobuf messages while decoding on the fly"
documentation = "https://docs.rs/protobuf_iter/"
repository = "https://github.com/astro/rust-protobuf-iter/"

[dependencies]
byteorder = "1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "varint_parse"
harness = false
