[package]
name = "protobuf_iter"
version = "0.1.3"
edition = "2024"
authors = ["Astro <astro@spaceboyz.net>"]
license = "MIT"
description = "Iterate over Protobuf messages while decoding on the fly"
documentation = "https://docs.rs/protobuf_iter/"
repository = "https://github.com/astro/rust-protobuf-iter/"

[[bench]]
name = "varint_parse"
harness = false

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
